--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./storage/img.svg" type="image/x-icon" /> <!-- Agrega esta línea -->
+    <link rel="icon" href="./storage/img/note.svg" type="image/x-icon" /> <!-- Agrega esta línea -->
     <title>Welcome</title>
   </head>
   <body>
