feat: :sparkles: making good practices now

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./storage/img/note.svg" type="image/x-icon" /> <!-- Agrega esta línea -->
+    <link rel="icon" href="./storage/img/note.svg" type="image/x-icon" />
     <title>Welcome</title>
-  </head>
-  <body>
-    <div id="index"></div>
+</head>
+<body>
+    <div id="app"></div> <!-- Asegúrate de que este div tenga el ID 'app' -->
     <script type="module" src="./js/main.js"></script>
-  </body>
+</body>
 </html>
